deploy: 66075b3bc67d11667180f220ca87cd38b85e87df

--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
   <meta property="og:title" content="Conference name" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://example.org/" />
-<meta property="og:image" content="https://example.org/img/badge.jpg"/>
+<meta property="og:url" content="https://dot-layer.github.io/sdhmtl/" />
+<meta property="og:image" content="https://dot-layer.github.io/img/badge.jpg"/>
 
 
   <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://example.org/img/badge.jpg"/>
+<meta name="twitter:image" content="https://dot-layer.github.io/img/badge.jpg"/>
 
 <meta name="twitter:title" content="Conference name"/>
 <meta name="twitter:description" content=""/>
 
 
-  <link rel="shortcut icon" href="https://example.org/img/favicon.ico" type="image/x-icon">
-  <link rel="apple-touch-icon" href="https://example.org/img/apple-touch-icon.png">
+  <link rel="shortcut icon" href="https://dot-layer.github.io/sdhmtl/img/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" href="https://dot-layer.github.io/sdhmtl/img/apple-touch-icon.png">
 
-  <link rel="stylesheet" type="text/css" href="https://example.org/css/main.css">
+  <link rel="stylesheet" type="text/css" href="https://dot-layer.github.io/sdhmtl/css/main.css">
 
 </head>
 <body>
@@ -101,7 +101,7 @@
   <li class="speakers-item" itemprop="performer" itemscope itemtype="http://schema.org/Person">
     
       <span class="speaker-photo">
-        <img class="photo" src="https://example.org/img/jplecavalier.jpeg" alt="J.P. Le Cavalier" itemprop="image">
+        <img class="photo" src="https://dot-layer.github.io/sdhmtl/img/jplecavalier.jpeg" alt="J.P. Le Cavalier" itemprop="image">
       </span>
     
 
@@ -132,7 +132,7 @@
 
   <li class="partner-item" itemscope itemtype="http://schema.org/Organization">
     <a href="https://www.dotlayer.org" class="partner-logo partner-link" itemprop="url" target="_blank">
-      <img src="https://example.org/img/dotlayer.png" alt=".Layer" class="photo" itemprop="image">
+      <img src="https://dot-layer.github.io/sdhmtl/img/dotlayer.png" alt=".Layer" class="photo" itemprop="image">
     </a>
   </li>
 
@@ -149,7 +149,7 @@
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="https://example.org/js/jquery.js"><\/script>')</script>
+  <script>window.jQuery || document.write('<script src="https://dot-layer.github.io/sdhmtl/js/jquery.js"><\/script>')</script>
   
   
 </body>
