--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <h2 class="section-title">À propos de l&#39;événement</h2>
 
 <p itemprop="description">
-  La conférence </em> Science des données et hockey <em> de Montréal (SDHMTL) est un événement unique en
+  La conférence <em> Science des données et hockey </em> de Montréal (SDHMTL) est un événement unique en
   son genre au Québec qui a pour but de réunir un large spectre de passionné·e·s de hockey.
   
   Que vous soyez entraineuses hors pair, pooleurs assidus ou expertes en analyse de données, vous y trouverez assurément votre compte!
